# textbase

./: .env.example  .gitignore  CONTRIBUTING.md  Demo Video Link.txt  PULL_REQUEST_TEMPLATE.md  README.md  cli.py  config.py  documentation.txt  health_keywords.txt  main.py  package.json  pyproject.toml  requirements.txt  requirements.txt.txt  test.py  userdata.db  zip.py
.github/: PR_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  contact_links.yml
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: FAQs.md  intro.md  usage.md
docs/docs/deployment/: _category_.json  deploy-from-cli.md  deploy-from-dashboard.md  prerequisites.md
docs/docs/examples/: WhatsappSMS-pizza-bot.md  _category_.json  cohere-chat-bot.md  cohere-prompt-bot.md  cohere-summarize-bot.md  dalle-bot.md  elocution-bot.md  gpt-assistants-bot.md  gpt-vision-bot.md  huggingface-bot.md  langchain.md  llama-bot.md  mimicking-bot.md  openai-bot.md  openai-url-specific-bot.md  palmai-bot.md  replicate-bot.md
docs/docs/get-started/: _category_.json  bot-example-with-response-structure.md  create-your-first-bot.md  expected-bot-response.md  installation.md  test-locally.md  usage-of-decorator-with-examples-and-response-structure.md
docs/docs/reference/: _category_.json  datatypes.md
docs/src/pages/: index.tsx
examples/: huggingface-bot.py  imagehugging_face-bot.py  mimic-bot.py  openai-bot.py  openai-vision-bot  palmai-bot.py
examples/Reduce-AI/: Accuracy.ipynb  chatbot dataset.csv  chatbot dataset.txt  main.py  result.md
examples/bardAi-bot/: README.md  main.py
examples/botlibre/: docs.md  main.py
examples/claude-api/: main.py
examples/cohere-chat-bot/: main.py
examples/cohere-prompt-bot/: main.py
examples/cohere-summarize-bot/: main.py
examples/dalle-bot/: main.py
examples/data_analysis_bot/: main.py
examples/discord-bot/: Readme.md  main.py
examples/document-bot/: main.py
examples/elocution-bot/: bot_discord.py  main.py
examples/gadget-whiz-bot/: main.py
examples/gpt-assistants-bot/: main.py
examples/gpt-vision-bot/: main.py
examples/huggingface/: Copy_of_DreamBooth_Stable_Diffusion.ipynb  main.py
examples/huggingface-bot/: main.py
examples/imagine-bot/: main.py
examples/info-genius-bot/: main.py
examples/langchain-bot/: main.py
examples/langchain_huggingface/: README.md  main.py
examples/llama-bot/: main.py
examples/math-whiz-bot/: main.py
examples/mimic-bot/: main.py
examples/mimic-bot-adv/: main.py
examples/movie_bot/: main.py
examples/openai-bot/: MYREADME.md  auth.json  main.py  prompt.py  readme.txt  requirements.txt
examples/openai-url-specific-bot/: main.py
examples/palmai-bot/: main.py
examples/replicate-bot/: main.py
examples/riffusion-bot/: main.py
examples/sentiment-analysis/: VADER_Accuracy.ipynb  main.md  main.py
examples/streamlit/: streamlit_vicky-chatbot.py
examples/talking-bot/: main.py
examples/transformers/: docs.md  main.py
plugins/calculator/: plugin.py
plugins/reminder/: plugin.py
plugins/time_and_date/: plugin.py
plugins/weather/: plugin.py
src/textbase/: backend.py  download.py  prompt.py  textbase_cli.py
src/textbase/frontend/: index.html
state/: __init__.py
stores/openai-bot/: main.py
stores/palmai-bot/: main.py
telegrambot/: main.py  readme.md  requirements.txt
telegrambot/utils/: config.ini
tests/: SeleniumTestScripts.py  test_bot.py  test_main.py  test_message.py  test_models.py  test_textbase_cli.py
textbase/: __init__.py  backend.py  bot.py  chatbot.py  classes.py  companyServices.py  constants.json  constants.py  datatypes.py  document_search.py  download.py  githubServices.py  gpt.py  helpers.py  langchain_hugging_face.py  logger.py  main.py  message.py  models.py  nlp.py  prompt.py  storage.py  textbase_cli.py  utils.py  vector_database.py  whatsappmsg.py
textbase/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
textbase/frontend/assets/: index-4d000148.css  index-6fa7a5bb.js  index-7aaa90c1.js  index-a74b6b46.js  index-ab8a0adc.css
textbase/frontend/public/: style.css
textbase/frontend/src/: App.css  App.tsx  QuickResponses.tsx  declarations.d.ts  index.css  main.tsx
textbase/frontend/src/assets/: Typing.json
textbase/frontend/src/components/: ChatBot.tsx  ChatMessage.tsx  CustomizationPanel.tsx  Field.tsx  Img.tsx  Loader.tsx  Messages.tsx  Sidebar.tsx  ThemeContext.tsx  (+1 more)
textbase/frontend/templates/: index.html
textbase/template/: main.py  requirements.txt
textbase/utils/: constants.py  download_build.py  helpers.py  implementations.py  ingest.py  logs.py  server.py  utilities.py
(+5 files in other folders)
